remove Config class
I'm doing a better version of the Config class in FBSR